Details
-
Bug
-
Status: Closed
-
P2: Important
-
Resolution: Done
-
5.10.1
-
macOS 10.12
-
ec9aa9f12142de82315eb6d37f121311ec8408bc
Description
When a Slider resides on a Drawer then the slider handle is not updating when dragging correctly.
To reproduce with the example, click and pull from the left hand side to get the Drawer and then click on one of the sliders and drag the handle.